--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/app.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <script>/* GTag Manager */</script>
+    <script>/* GTAg Managger */</script>
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
